WordPress templates Styling and Functions All around

--- a/index.html
+++ b/index.html
@@ -23,15 +23,140 @@
 						<img src="images/logo-test.png">
 					</div>
 					<div class="col-xs-9 half-p">
-						<nav class="col-xs-10 no-p float-right">
-							<ul>
-								<li>HOME</li>
-								<li>ABOUT US</li>
-								<li>ADMISSIONS</li>
-								<li>PROGRAMS</li>
-								<li>GROUPS</li>
-								<li>COMMUNITY</li>
-							</ul>
+						<nav class="col-xs-10 no-p mobile">
+							<div class="menu">
+								<ul>
+									<li class="page_item page-item-4 current_page_item">
+										<a href="http://manitouschool.org.s180309.gridserver.com/web/">Home</a>
+									</li>
+									<li class="page_item page-item-6 page_item_has_children">
+										<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=6">About Us</a>
+										<ul class="children">
+											<li class="page_item page-item-8">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=8">Welcome</a>
+											</li>
+											<li class="page_item page-item-10">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=10">Mission Statement</a>
+											</li>
+											<li class="page_item page-item-12">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=12">Philosophy</a>
+											</li>
+											<li class="page_item page-item-14">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=14">Our Background</a>
+											</li>
+											<li class="page_item page-item-16">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=16">Our People</a>
+											</li>
+											<li class="page_item page-item-18">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=18">The Name "Manitou"</a>
+											</li>
+											<li class="page_item page-item-20 page_item_has_children">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=20">Our Campus</a>
+											</li>
+											<li class="page_item page-item-26">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=26">Advisory Board</a>
+											</li>
+											<li class="page_item page-item-28">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=28">Contact Us</a>
+											</li>
+										</ul>
+									</li>
+									<li class="page_item page-item-31 page_item_has_children">
+										<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=31">Admissions</a>
+										<ul class="children">
+											<li class="page_item page-item-33">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=33">How to Apply</a>
+											</li>
+											<li class="page_item page-item-35">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=35">Program Offerings</a>
+											</li>
+											<li class="page_item page-item-36">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=36">Tuition &amp; Financial Aid</a>
+											</li>
+											<li class="page_item page-item-37">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=37">FAQs</a>
+											</li>
+											<li class="page_item page-item-38">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=38">Contact Admissions</a>
+											</li>
+										</ul>
+									</li>
+									<li class="page_item page-item-44 page_item_has_children">
+										<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=44">Programs</a>
+										<ul class="children">
+											<li class="page_item page-item-47">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=47">Interdisciplinary Studies</a>
+											</li>
+											<li class="page_item page-item-48">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=48">Experiential Education</a>
+											</li>
+											<li class="page_item page-item-49">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=49">Project-Based Learning</a>
+											</li>
+											<li class="page_item page-item-50">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=50">Spanish Language Immersion</a>
+											</li>
+											<li class="page_item page-item-51">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=51">Nature &amp; the Outdoor Classroom</a>
+											</li>
+											<li class="page_item page-item-52 page_item_has_children">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=52">Curriculum</a>
+											</li>
+											<li class="page_item page-item-53">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=53">Learning in the Community</a>
+											</li>
+											<li class="page_item page-item-54">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=54">After-school Programs</a>
+											</li>
+											<li class="page_item page-item-55">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=55">Assessments</a>
+											</li>
+										</ul>
+									</li>
+									<li class="page_item page-item-56 page_item_has_children">
+										<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=56">Groups</a>
+										<ul class="children">
+											<li class="page_item page-item-58">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=58">The Benefits of Bridge Classes</a>
+											</li>
+											<li class="page_item page-item-59">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=59">Preschool</a>
+											</li>
+											<li class="page_item page-item-60">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=60">Pre-K &amp; K</a>
+											</li>
+											<li class="page_item page-item-61">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=61">1st and 2nd Grade</a>
+											</li>
+											<li class="page_item page-item-62">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=62">3rd and 4th Grade</a>
+											</li>
+											<li class="page_item page-item-63">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=63">Commitment to Expand</a>
+											</li>
+										</ul>
+									</li>
+									<li class="page_item page-item-64 page_item_has_children">
+										<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=64">Community</a>
+										<ul class="children">
+											<li class="page_item page-item-66">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=66">Glynwood</a>
+											</li>
+											<li class="page_item page-item-67">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=67">Hudson Valley Center for Contemporary Arts</a>
+											</li>
+											<li class="page_item page-item-68"><a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=68">Food Pantry</a>
+											</li>
+											<li class="page_item page-item-69">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=69">Our Local Libraries</a>
+											</li>
+											<li class="page_item page-item-70">
+												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=70">Community Outreach</a>
+											</li>
+										</ul>
+									</li>
+								</ul>
+							</div>
 						</nav>
 					</div>
 				</section>				
@@ -76,6 +201,160 @@
 		</section>
 
 		<section class="col-xs-12 rule-4 orange-1"></section>
+		<section class="col-xs-12 home-shadow"></section>
+
+		<section id="footer-wrapper" class="col-xs-12 no-p">
+			<section id="footer-container" class="container">
+				<footer class="row no-p">
+					<div class="col-xs-3 contact">
+						<img src="images/logo-test.png">
+						<div class="address">
+							<p>Manitou Learning Center<br>7 Old Manitou Road,<br>Garrison, NY</p>
+							<p>646-295-7349<br>info@manitoulearningcenter.org</p>
+						</div>
+					</div>
+					<nav class="col-xs-9">
+						<div class="menu">
+							<ul>
+								<li class="page_item page-item-6 page_item_has_children">
+									<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=6">About Us</a>
+									<ul class="children">
+										<li class="page_item page-item-8">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=8">Welcome</a>
+										</li>
+										<li class="page_item page-item-10">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=10">Mission Statement</a>
+										</li>
+										<li class="page_item page-item-12">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=12">Philosophy</a>
+										</li>
+										<li class="page_item page-item-14">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=14">Our Background</a>
+										</li>
+										<li class="page_item page-item-16">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=16">Our People</a>
+										</li>
+										<li class="page_item page-item-18">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=18">The Name "Manitou"</a>
+										</li>
+										<li class="page_item page-item-20 page_item_has_children">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=20">Our Campus</a>
+										</li>
+										<li class="page_item page-item-26">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=26">Advisory Board</a>
+										</li>
+										<li class="page_item page-item-28">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=28">Contact Us</a>
+										</li>
+									</ul>
+								</li>
+								<li class="page_item page-item-31 page_item_has_children">
+									<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=31">Admissions</a>
+									<ul class="children">
+										<li class="page_item page-item-33">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=33">How to Apply</a>
+										</li>
+										<li class="page_item page-item-35">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=35">Program Offerings</a>
+										</li>
+										<li class="page_item page-item-36">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=36">Tuition &amp; Financial Aid</a>
+										</li>
+										<li class="page_item page-item-37">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=37">FAQs</a>
+										</li>
+										<li class="page_item page-item-38">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=38">Contact Admissions</a>
+										</li>
+									</ul>
+								</li>
+								<li class="page_item page-item-44 page_item_has_children">
+									<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=44">Programs</a>
+									<ul class="children">
+										<li class="page_item page-item-47">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=47">Interdisciplinary Studies</a>
+										</li>
+										<li class="page_item page-item-48">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=48">Experiential Education</a>
+										</li>
+										<li class="page_item page-item-49">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=49">Project-Based Learning</a>
+										</li>
+										<li class="page_item page-item-50">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=50">Spanish Language Immersion</a>
+										</li>
+										<li class="page_item page-item-51">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=51">Nature &amp; the Outdoor Classroom</a>
+										</li>
+										<li class="page_item page-item-52 page_item_has_children">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=52">Curriculum</a>
+										</li>
+										<li class="page_item page-item-53">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=53">Learning in the Community</a>
+										</li>
+										<li class="page_item page-item-54">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=54">After-school Programs</a>
+										</li>
+										<li class="page_item page-item-55">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=55">Assessments</a>
+										</li>
+									</ul>
+								</li>
+								<li class="page_item page-item-56 page_item_has_children">
+									<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=56">Groups</a>
+									<ul class="children">
+										<li class="page_item page-item-58">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=58">The Benefits of Bridge Classes</a>
+										</li>
+										<li class="page_item page-item-59">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=59">Preschool</a>
+										</li>
+										<li class="page_item page-item-60">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=60">Pre-K &amp; K</a>
+										</li>
+										<li class="page_item page-item-61">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=61">1st and 2nd Grade</a>
+										</li>
+										<li class="page_item page-item-62">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=62">3rd and 4th Grade</a>
+										</li>
+										<li class="page_item page-item-63">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=63">Commitment to Expand</a>
+										</li>
+									</ul>
+								</li>
+								<li class="page_item page-item-64 page_item_has_children">
+									<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=64">Community</a>
+									<ul class="children">
+										<li class="page_item page-item-66">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=66">Glynwood</a>
+										</li>
+										<li class="page_item page-item-67">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=67">Hudson Valley Center for Contemporary Arts</a>
+										</li>
+										<li class="page_item page-item-68"><a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=68">Food Pantry</a>
+										</li>
+										<li class="page_item page-item-69">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=69">Our Local Libraries</a>
+										</li>
+										<li class="page_item page-item-70">
+											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=70">Community Outreach</a>
+										</li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+					</nav>
+				</footer>
+			</section>
+			<section id="copyright" class="col-xs-12 orange-1 no-p">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12">Copyright &copy; 2014, All rights reserved</div>
+					</div>
+				</div>
+			</section>
+		</section>
 
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="https://code.jquery.com/jquery.js"></script>
