--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="style.css" rel="stylesheet">
-
+		<script src="js/display-0.1.js"></script>
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 		<!--[if lt IE 9]>
@@ -25,6 +25,7 @@
 					<div class="col-xs-9 half-p">
 						<nav class="col-xs-10 no-p mobile">
 							<div class="menu">
+								<div id="mobile-menu" >MENU<div>
 								<ul>
 									<li class="page_item page-item-4 current_page_item">
 										<a href="http://manitouschool.org.s180309.gridserver.com/web/">Home</a>
@@ -202,6 +203,44 @@
 
 		<section class="col-xs-12 rule-4 orange-1"></section>
 		<section class="col-xs-12 home-shadow"></section>
+
+		<section id="home-intro-wrapper" class="col-xs-12 no-p">
+			<section id="home-intro-container" class="container no-p">
+				<div class="row no-p">
+					<div id="intro-text" class="col-xs-12"><?php the_field('home_intro_text', 'options') ?></div>
+
+					<div id="next-steps" class="col-xs-12">
+						<div class="first">Some Next Steps</div>
+						<div class="second">To Help you get started</div>
+						<div class="rule"></div>
+					</div>
+
+					<div class="col-xs-4 call-to-action">
+						<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=8">
+							<h6>Learn About Manitou</h6>
+							<span>Meet our staff,<br>read our mission statement,<br>or ask us a question.</span>
+						</a>
+					</div>
+
+					<div class="col-xs-4 call-to-action">
+						<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=33">
+							<h6>Apply to Manitou</h6>
+							<span>Learn about our<br>admissions process and get<br>a school application.</span>
+						</a>
+					</div>
+
+					<div class="col-xs-4 call-to-action">
+						<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=52">
+							<h6>Our Programs</h6>
+							<span>Explore all the different<br>and distinct programs we<br>offer at Manitou.</span>
+						</a>
+					</div>
+					
+					<div><a class="page-btn " href="">Sample Button</a></div>
+
+				</div>
+			</section>
+		</section>
 
 		<section id="footer-wrapper" class="col-xs-12 no-p">
 			<section id="footer-container" class="container">
