Mobile and Tablet Responsive Goodies

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/slicknav.css" rel="stylesheet">
 		<link href="style.css" rel="stylesheet">
-		<script src="js/display-0.1.js"></script>
+
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 		<!--[if lt IE 9]>
@@ -22,10 +23,9 @@
 					<div id="logo" class="col-xs-3 full-p">
 						<img src="images/logo-test.png">
 					</div>
-					<div class="col-xs-9 half-p">
-						<nav class="col-xs-10 no-p mobile">
+					<div id="primary-nav-container" class="col-xs-9 half-p">
+						<nav class="col-xs-10 no-p desktop">
 							<div class="menu">
-								<div id="mobile-menu" >MENU<div>
 								<ul>
 									<li class="page_item page-item-4 current_page_item">
 										<a href="http://manitouschool.org.s180309.gridserver.com/web/">Home</a>
@@ -399,5 +399,7 @@
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 		<script src="js/bootstrap.min.js"></script>
+		<script src="js/display-0.1.js"></script>
+		<script src="js/jquery.slicknav.min.js"></script>	
 	</body>
 </html>
