--- a/Theme/index.html
+++ b/Theme/index.html
@@ -5,7 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link href="css/slicknav.css" rel="stylesheet">
 		<link href="style.css" rel="stylesheet">
 
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -23,141 +22,16 @@
 					<div id="logo" class="col-xs-3 full-p">
 						<img src="images/logo-test.png">
 					</div>
-					<div id="primary-nav-container" class="col-xs-9 half-p">
-						<nav class="col-xs-10 no-p desktop">
-							<div class="menu">
-								<ul>
-									<li class="page_item page-item-4 current_page_item">
-										<a href="http://manitouschool.org.s180309.gridserver.com/web/">Home</a>
-									</li>
-									<li class="page_item page-item-6 page_item_has_children">
-										<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=6">About Us</a>
-										<ul class="children">
-											<li class="page_item page-item-8">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=8">Welcome</a>
-											</li>
-											<li class="page_item page-item-10">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=10">Mission Statement</a>
-											</li>
-											<li class="page_item page-item-12">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=12">Philosophy</a>
-											</li>
-											<li class="page_item page-item-14">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=14">Our Background</a>
-											</li>
-											<li class="page_item page-item-16">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=16">Our People</a>
-											</li>
-											<li class="page_item page-item-18">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=18">The Name "Manitou"</a>
-											</li>
-											<li class="page_item page-item-20 page_item_has_children">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=20">Our Campus</a>
-											</li>
-											<li class="page_item page-item-26">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=26">Advisory Board</a>
-											</li>
-											<li class="page_item page-item-28">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=28">Contact Us</a>
-											</li>
-										</ul>
-									</li>
-									<li class="page_item page-item-31 page_item_has_children">
-										<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=31">Admissions</a>
-										<ul class="children">
-											<li class="page_item page-item-33">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=33">How to Apply</a>
-											</li>
-											<li class="page_item page-item-35">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=35">Program Offerings</a>
-											</li>
-											<li class="page_item page-item-36">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=36">Tuition &amp; Financial Aid</a>
-											</li>
-											<li class="page_item page-item-37">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=37">FAQs</a>
-											</li>
-											<li class="page_item page-item-38">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=38">Contact Admissions</a>
-											</li>
-										</ul>
-									</li>
-									<li class="page_item page-item-44 page_item_has_children">
-										<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=44">Programs</a>
-										<ul class="children">
-											<li class="page_item page-item-47">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=47">Interdisciplinary Studies</a>
-											</li>
-											<li class="page_item page-item-48">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=48">Experiential Education</a>
-											</li>
-											<li class="page_item page-item-49">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=49">Project-Based Learning</a>
-											</li>
-											<li class="page_item page-item-50">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=50">Spanish Language Immersion</a>
-											</li>
-											<li class="page_item page-item-51">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=51">Nature &amp; the Outdoor Classroom</a>
-											</li>
-											<li class="page_item page-item-52 page_item_has_children">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=52">Curriculum</a>
-											</li>
-											<li class="page_item page-item-53">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=53">Learning in the Community</a>
-											</li>
-											<li class="page_item page-item-54">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=54">After-school Programs</a>
-											</li>
-											<li class="page_item page-item-55">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=55">Assessments</a>
-											</li>
-										</ul>
-									</li>
-									<li class="page_item page-item-56 page_item_has_children">
-										<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=56">Groups</a>
-										<ul class="children">
-											<li class="page_item page-item-58">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=58">The Benefits of Bridge Classes</a>
-											</li>
-											<li class="page_item page-item-59">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=59">Preschool</a>
-											</li>
-											<li class="page_item page-item-60">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=60">Pre-K &amp; K</a>
-											</li>
-											<li class="page_item page-item-61">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=61">1st and 2nd Grade</a>
-											</li>
-											<li class="page_item page-item-62">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=62">3rd and 4th Grade</a>
-											</li>
-											<li class="page_item page-item-63">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=63">Commitment to Expand</a>
-											</li>
-										</ul>
-									</li>
-									<li class="page_item page-item-64 page_item_has_children">
-										<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=64">Community</a>
-										<ul class="children">
-											<li class="page_item page-item-66">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=66">Glynwood</a>
-											</li>
-											<li class="page_item page-item-67">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=67">Hudson Valley Center for Contemporary Arts</a>
-											</li>
-											<li class="page_item page-item-68"><a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=68">Food Pantry</a>
-											</li>
-											<li class="page_item page-item-69">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=69">Our Local Libraries</a>
-											</li>
-											<li class="page_item page-item-70">
-												<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=70">Community Outreach</a>
-											</li>
-										</ul>
-									</li>
-								</ul>
-							</div>
+					<div class="col-xs-9 half-p">
+						<nav class="col-xs-10 no-p float-right">
+							<ul>
+								<li>HOME</li>
+								<li>ABOUT US</li>
+								<li>ADMISSIONS</li>
+								<li>PROGRAMS</li>
+								<li>GROUPS</li>
+								<li>COMMUNITY</li>
+							</ul>
 						</nav>
 					</div>
 				</section>				
@@ -204,44 +78,6 @@
 		<section class="col-xs-12 rule-4 orange-1"></section>
 		<section class="col-xs-12 home-shadow"></section>
 
-		<section id="home-intro-wrapper" class="col-xs-12 no-p">
-			<section id="home-intro-container" class="container no-p">
-				<div class="row no-p">
-					<div id="intro-text" class="col-xs-12"><?php the_field('home_intro_text', 'options') ?></div>
-
-					<div id="next-steps" class="col-xs-12">
-						<div class="first">Some Next Steps</div>
-						<div class="second">To Help you get started</div>
-						<div class="rule"></div>
-					</div>
-
-					<div class="col-xs-4 call-to-action">
-						<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=8">
-							<h6>Learn About Manitou</h6>
-							<span>Meet our staff,<br>read our mission statement,<br>or ask us a question.</span>
-						</a>
-					</div>
-
-					<div class="col-xs-4 call-to-action">
-						<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=33">
-							<h6>Apply to Manitou</h6>
-							<span>Learn about our<br>admissions process and get<br>a school application.</span>
-						</a>
-					</div>
-
-					<div class="col-xs-4 call-to-action">
-						<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=52">
-							<h6>Our Programs</h6>
-							<span>Explore all the different<br>and distinct programs we<br>offer at Manitou.</span>
-						</a>
-					</div>
-					
-					<div><a class="page-btn " href="">Sample Button</a></div>
-
-				</div>
-			</section>
-		</section>
-
 		<section id="footer-wrapper" class="col-xs-12 no-p">
 			<section id="footer-container" class="container">
 				<footer class="row no-p">
@@ -252,138 +88,6 @@
 							<p>646-295-7349<br>info@manitoulearningcenter.org</p>
 						</div>
 					</div>
-					<nav class="col-xs-9">
-						<div class="menu">
-							<ul>
-								<li class="page_item page-item-6 page_item_has_children">
-									<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=6">About Us</a>
-									<ul class="children">
-										<li class="page_item page-item-8">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=8">Welcome</a>
-										</li>
-										<li class="page_item page-item-10">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=10">Mission Statement</a>
-										</li>
-										<li class="page_item page-item-12">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=12">Philosophy</a>
-										</li>
-										<li class="page_item page-item-14">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=14">Our Background</a>
-										</li>
-										<li class="page_item page-item-16">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=16">Our People</a>
-										</li>
-										<li class="page_item page-item-18">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=18">The Name "Manitou"</a>
-										</li>
-										<li class="page_item page-item-20 page_item_has_children">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=20">Our Campus</a>
-										</li>
-										<li class="page_item page-item-26">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=26">Advisory Board</a>
-										</li>
-										<li class="page_item page-item-28">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=28">Contact Us</a>
-										</li>
-									</ul>
-								</li>
-								<li class="page_item page-item-31 page_item_has_children">
-									<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=31">Admissions</a>
-									<ul class="children">
-										<li class="page_item page-item-33">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=33">How to Apply</a>
-										</li>
-										<li class="page_item page-item-35">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=35">Program Offerings</a>
-										</li>
-										<li class="page_item page-item-36">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=36">Tuition &amp; Financial Aid</a>
-										</li>
-										<li class="page_item page-item-37">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=37">FAQs</a>
-										</li>
-										<li class="page_item page-item-38">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=38">Contact Admissions</a>
-										</li>
-									</ul>
-								</li>
-								<li class="page_item page-item-44 page_item_has_children">
-									<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=44">Programs</a>
-									<ul class="children">
-										<li class="page_item page-item-47">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=47">Interdisciplinary Studies</a>
-										</li>
-										<li class="page_item page-item-48">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=48">Experiential Education</a>
-										</li>
-										<li class="page_item page-item-49">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=49">Project-Based Learning</a>
-										</li>
-										<li class="page_item page-item-50">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=50">Spanish Language Immersion</a>
-										</li>
-										<li class="page_item page-item-51">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=51">Nature &amp; the Outdoor Classroom</a>
-										</li>
-										<li class="page_item page-item-52 page_item_has_children">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=52">Curriculum</a>
-										</li>
-										<li class="page_item page-item-53">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=53">Learning in the Community</a>
-										</li>
-										<li class="page_item page-item-54">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=54">After-school Programs</a>
-										</li>
-										<li class="page_item page-item-55">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=55">Assessments</a>
-										</li>
-									</ul>
-								</li>
-								<li class="page_item page-item-56 page_item_has_children">
-									<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=56">Groups</a>
-									<ul class="children">
-										<li class="page_item page-item-58">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=58">The Benefits of Bridge Classes</a>
-										</li>
-										<li class="page_item page-item-59">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=59">Preschool</a>
-										</li>
-										<li class="page_item page-item-60">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=60">Pre-K &amp; K</a>
-										</li>
-										<li class="page_item page-item-61">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=61">1st and 2nd Grade</a>
-										</li>
-										<li class="page_item page-item-62">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=62">3rd and 4th Grade</a>
-										</li>
-										<li class="page_item page-item-63">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=63">Commitment to Expand</a>
-										</li>
-									</ul>
-								</li>
-								<li class="page_item page-item-64 page_item_has_children">
-									<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=64">Community</a>
-									<ul class="children">
-										<li class="page_item page-item-66">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=66">Glynwood</a>
-										</li>
-										<li class="page_item page-item-67">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=67">Hudson Valley Center for Contemporary Arts</a>
-										</li>
-										<li class="page_item page-item-68"><a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=68">Food Pantry</a>
-										</li>
-										<li class="page_item page-item-69">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=69">Our Local Libraries</a>
-										</li>
-										<li class="page_item page-item-70">
-											<a href="http://manitouschool.org.s180309.gridserver.com/web/?page_id=70">Community Outreach</a>
-										</li>
-									</ul>
-								</li>
-							</ul>
-						</div>
-					</nav>
 				</footer>
 			</section>
 			<section id="copyright" class="col-xs-12 orange-1 no-p">
@@ -399,7 +103,5 @@
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 		<script src="js/bootstrap.min.js"></script>
-		<script src="js/display-0.1.js"></script>
-		<script src="js/jquery.slicknav.min.js"></script>	
 	</body>
 </html>
